@@ -1,5 +1,5 @@
 /******************************************************  *************************
- * Copyright (C) 2020 Wolfgang Schramm and Contributors
+ * Copyright (C) 2023 Wolfgang Schramm and Contributors
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License as published by the Free Software
@@ -15,7 +15,9 @@
  *******************************************************************************/
 package net.tourbook.ui.views.tourCatalog;
 
+import net.tourbook.OtherMessages;
 import net.tourbook.common.CommonActivator;
+import net.tourbook.common.CommonImages;
 import net.tourbook.common.UI;
 import net.tourbook.common.font.MTFont;
 import net.tourbook.common.formatter.FormatManager;
@@ -39,11 +41,8 @@ import org.eclipse.swt.widgets.ToolBar;
 
 public class RefTour_YearStatistic_TooltipUI {
 
-   private static final String APP_ACTION_CLOSE_TOOLTIP = net.tourbook.common.Messages.App_Action_Close_Tooltip;
-   private static final String IMAGE_APP_CLOSE          = net.tourbook.common.Messages.Image__App_Close;
-
-   private static final int    VERTICAL_LINE_SPACE      = 8;
-   private static final int    SHELL_MARGIN             = 5;
+   private static final int VERTICAL_LINE_SPACE = 8;
+   private static final int SHELL_MARGIN        = 5;
 
    /*
     * Tooltip context
@@ -83,8 +82,8 @@ public class RefTour_YearStatistic_TooltipUI {
 
          super(null, Action.AS_PUSH_BUTTON);
 
-         setToolTipText(APP_ACTION_CLOSE_TOOLTIP);
-         setImageDescriptor(CommonActivator.getImageDescriptor(IMAGE_APP_CLOSE));
+         setToolTipText(OtherMessages.APP_ACTION_CLOSE_TOOLTIP);
+         setImageDescriptor(CommonActivator.getThemedImageDescriptor(CommonImages.App_Close));
       }
 
       @Override
@@ -104,7 +103,7 @@ public class RefTour_YearStatistic_TooltipUI {
             // set index for the tab folder which should be selected when dialog is opened and applied
             // in net.tourbook.preferences.PrefPageAppearanceDisplayFormat.applyData(Object)
             // -> select single tour formatting
-            new Integer(0));
+            Integer.valueOf(0));
    }
 
    /**
